--- a/src/backend/appsettings.Development.json
+++ b/src/backend/appsettings.Development.json
@@ -2,7 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://localhost:7183",
+      "http://localhost:5127"
+    ]
   }
 }
