--- a/src/backend/appsettings.json
+++ b/src/backend/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:YOUR_AZURE_SQL_SERVER.database.windows.net,1433;Initial Catalog=TopSaasDb;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;User ID=${DB_USER};Password=${DB_PASSWORD}"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://localhost:7183",
+      "http://localhost:5127"
+    ]
+  }
 }
